--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "home",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://deysaherdi.github.io/home/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -12,6 +11,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://deysaherdi.github.io/home/",
   "devDependencies": {
     "gh-pages": "^1.1.0"
   },
@@ -21,7 +21,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "deploy":"gh-pages -d build",
+    "abrir-pagina":"npm run start",
+    "atualizar-site":"npm run predeploy && npm run deploy"
   },
   "eslintConfig": {
     "extends": [
